--- a/css/style.css
+++ b/css/style.css
@@ -10571,4 +10571,13 @@ section hr {
   opacity: 1;
 }
 
-/* #2c3f5e *//*# sourceMappingURL=style.css.map */
+/* #2c3f5e */
+.bg-image {
+  height: 100vh;
+  background: rgba(255, 255, 255, 0.5);
+  background-image: url("../imges/blur-cellphone-close-up-196644.jpg");
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-blend-mode: overlay;
+}/*# sourceMappingURL=style.css.map */
