--- a/css/_main.scss
+++ b/css/_main.scss
@@ -5,8 +5,31 @@ body{
 }
 
 section hr{
-    opacity: 1;
-  }
+  margin: auto;
+  width: 200px;
+  opacity: 1;
+}
 
+
+
+.bg-image{
+  height: 100vh;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-blend-mode: overlay;
+}
+
+.heading{
+  max-height: 300px;
+  background-image: url('../imges/heading-bg.jpg');
+  background: rgba(255, 255, 255, 0.5);
+}
+
+.main{
+  height: 500px;
+  background: #333;
+  color: #fff;
+}
 
 /* #2c3f5e */
