--- a/css/_main.scss
+++ b/css/_main.scss
@@ -14,16 +14,25 @@ section hr{
 
 .bg-image{
   height: 100vh;
+  background: rgba(255, 255, 255, 0.5);
   background-size: cover;
-  background-position: center center;
+  
   background-repeat: no-repeat;
   background-blend-mode: overlay;
 }
 
 .heading{
+  position: relative;
   max-height: 300px;
   background-image: url('../imges/heading-bg.jpg');
-  background: rgba(255, 255, 255, 0.5);
+  background-position: center center;
+}
+
+.box-heading{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .main{
