--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -1,3 +1,32 @@
+
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css");
+
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Mono+One&family=Varela+Round&display=swap');
+// font-family: 'Rubik Mono One', sans-serif;
+
+// font-family: 'Varela Round', sans-serif;
+
+
 $theme-colors: (
   "primary":    #2c3f5e,
 );
+$primary-color: #2c3f5e;
+$text-shadow: 0px 2px 3px rgba(0,0,0,0.5);
+
+@mixin bg-img($bg-color: rgba(255, 255, 255, 0.5)) {
+  background: $bg-color;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-blend-mode: overlay;
+}
+
+
+%waves-svg{
+  z-index: 1;
+  position: absolute;
+  width: 100%;
+  background: rgba(0, 0, 0, 0);
+  color: $primary-color;
+}
+
