--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,14 @@
 @charset "UTF-8";
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css");
+@import url("https://fonts.googleapis.com/css2?family=Rubik+Mono+One&family=Varela+Round&display=swap");
+.waves-svg, .waves-svg-top {
+  z-index: 1;
+  position: absolute;
+  width: 100%;
+  background: rgba(0, 0, 0, 0);
+  color: #2c3f5e;
+}
+
 /*!
  * Bootstrap v5.1.1 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
@@ -10567,14 +10577,14 @@ body {
   font-family: "Varela Round", sans-serif;
 }
 
-section hr {
-  opacity: 1;
-}
-
 .heading {
   position: relative;
-  max-height: 400px;
+  height: 600px;
   background: rgba(255, 255, 255, 0.5);
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-blend-mode: overlay;
   background-image: url("../imges/blur-cellphone-close-up-196644.jpg");
 }
 .heading .box-header {
@@ -10583,33 +10593,92 @@ section hr {
   left: 50%;
   transform: translate(-50%, -50%);
 }
-
-.bg-image {
-  height: 100vh;
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-blend-mode: overlay;
+.heading h2, .heading .h2 {
+  font-family: "Rubik Mono One", sans-serif;
+  font-size: 6em;
+  letter-spacing: 8px;
+  text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.5);
+}
+.heading hr {
+  opacity: 1;
+  border-top: 8px solid #2c3f5e;
+}
+.heading h3, .heading .h3 {
+  font-size: 6em;
+  text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.5);
 }
 
 .main {
-  padding: 60px 0;
-  max-height: 700px;
+  position: relative;
+  padding: 180px 0;
   background: #2c3f5e;
-  background: linear-gradient(153deg, #2c3f5e 30%, #4c3f1d 70%);
+  background: linear-gradient(180deg, #2c3f5e 30%, #4c3f1d 70%);
 }
 .main .main-box {
-  padding: 30px;
-  height: 100%;
+  padding: 40px;
   background: rgba(0, 0, 0, 0.3);
-  background-image: url("../imges/web-design-2906159_1920.jpg");
   background-position: center center;
   background-size: cover;
+  background-repeat: no-repeat;
+  background-blend-mode: overlay;
+  background-image: url("../imges/web-design-2906159_1920.jpg");
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.8);
   border-radius: 8px;
 }
+.main .main-box h2, .main .main-box .h2 {
+  font-size: 4em;
+  text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.5);
+}
+.main .main-box hr {
+  opacity: 1;
+  border-top: 4px solid #fff;
+  width: 220px;
+  text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.5);
+}
 .main .main-box p {
+  font-size: 2em;
   line-height: 2;
+  text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.5);
+}
+
+.waves-svg-top {
+  fill: #2c3f5e;
+  transform: rotate(180deg);
+  bottom: -1px;
+}
+
+.waves-svg {
+  fill: #4c3f1d;
+  top: 0;
+}
+
+.knowledge {
+  position: relative;
+  padding: 120px 0;
+  background: linear-gradient(160deg, #dddddd 0%, #0d1a35 100%);
+  color: #2c3f5e;
+}
+.knowledge .card {
+  border-radius: 10px;
+}
+.knowledge i {
+  font-size: 4em;
+}
+.knowledge h2, .knowledge .h2 {
+  padding: 20px 0;
+  font-size: 7em;
+  text-align: center;
+  text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.5);
+}
+.knowledge h5, .knowledge .h5 {
+  padding: 10px 0;
+  font-size: 3em;
+  text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.5);
+}
+.knowledge p {
+  padding: 10px;
+  font-size: 1.7em;
+  text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.5);
 }
 
 /* #2c3f5e *//*# sourceMappingURL=style.css.map */
