--- a/css/_main.scss
+++ b/css/_main.scss
@@ -5,7 +5,7 @@ body{
 
 .heading{
   position: relative;
-  height: 800px;
+  height: 100vh;
   @include bg-img($bg-color: rgba(255, 255, 255, 0.5));
   background-image: url('../imges/blur-cellphone-close-up-196644.jpg');
   
@@ -55,7 +55,7 @@ body{
       text-shadow: $text-shadow;
     }
     p{
-      font-size: 2em;
+      font-size: 2.5em;
       line-height: 2;
       text-shadow: $text-shadow;
     }
@@ -84,8 +84,8 @@ body{
   background: linear-gradient(160deg, #dddddd 0%, #0d1a35 100%);;
   // color: $primary-color;
   h2{
-    padding: 40px 0;
-    font-size: 7em;
+    padding: 100px 0;
+    font-size: 5em;
     text-align: center;
     text-shadow: $text-shadow;
   }
@@ -99,12 +99,12 @@ body{
     
     h5{
       padding: 10px 0;
-      font-size: 3em;
+      font-size: 2.5em;
       text-shadow: $text-shadow;
     }
     p{
       padding: 10px;
-      font-size: 1.7em;
+      font-size: 1.5em;
       text-shadow: $text-shadow;
     }
   }
