--- a/css/style.css
+++ b/css/style.css
@@ -10579,7 +10579,7 @@ body {
 
 .heading {
   position: relative;
-  height: 800px;
+  height: 100vh;
   background: rgba(255, 255, 255, 0.5);
   background-position: center center;
   background-size: cover;
@@ -10636,7 +10636,7 @@ body {
   text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.5);
 }
 .main .main-box p {
-  font-size: 2em;
+  font-size: 2.5em;
   line-height: 2;
   text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.5);
 }
@@ -10658,8 +10658,8 @@ body {
   background: linear-gradient(160deg, #dddddd 0%, #0d1a35 100%);
 }
 .knowledge h2, .knowledge .h2 {
-  padding: 40px 0;
-  font-size: 7em;
+  padding: 100px 0;
+  font-size: 5em;
   text-align: center;
   text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.5);
 }
@@ -10673,12 +10673,12 @@ body {
 }
 .knowledge .card h5, .knowledge .card .h5 {
   padding: 10px 0;
-  font-size: 3em;
+  font-size: 2.5em;
   text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.5);
 }
 .knowledge .card p {
   padding: 10px;
-  font-size: 1.7em;
+  font-size: 1.5em;
   text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.5);
 }
 .knowledge .icons {
