--- a/css/style.css
+++ b/css/style.css
@@ -5929,6 +5929,7 @@ textarea.form-control-lg {
 }
 
 .sticky-top {
+  position: -webkit-sticky;
   position: sticky;
   top: 0;
   z-index: 1020;
@@ -5936,6 +5937,7 @@ textarea.form-control-lg {
 
 @media (min-width: 576px) {
   .sticky-sm-top {
+    position: -webkit-sticky;
     position: sticky;
     top: 0;
     z-index: 1020;
@@ -5943,6 +5945,7 @@ textarea.form-control-lg {
 }
 @media (min-width: 768px) {
   .sticky-md-top {
+    position: -webkit-sticky;
     position: sticky;
     top: 0;
     z-index: 1020;
@@ -5950,6 +5953,7 @@ textarea.form-control-lg {
 }
 @media (min-width: 992px) {
   .sticky-lg-top {
+    position: -webkit-sticky;
     position: sticky;
     top: 0;
     z-index: 1020;
@@ -5957,6 +5961,7 @@ textarea.form-control-lg {
 }
 @media (min-width: 1200px) {
   .sticky-xl-top {
+    position: -webkit-sticky;
     position: sticky;
     top: 0;
     z-index: 1020;
@@ -5964,6 +5969,7 @@ textarea.form-control-lg {
 }
 @media (min-width: 1400px) {
   .sticky-xxl-top {
+    position: -webkit-sticky;
     position: sticky;
     top: 0;
     z-index: 1020;
@@ -6166,6 +6172,7 @@ textarea.form-control-lg {
 }
 
 .position-sticky {
+  position: -webkit-sticky !important;
   position: sticky !important;
 }
 
@@ -10690,10 +10697,20 @@ body {
 }
 
 .Portfolio {
-  padding: 200px 0;
+  padding: 100px 0;
 }
 .Portfolio h2, .Portfolio .h2 {
+  padding: 20px 0;
+  font-size: 2.5em;
   text-align: center;
+}
+
+footer {
+  height: 100px;
+  line-height: 100px;
+  text-align: center;
+  background: #333333;
+  color: #ffffff;
 }
 
 /* #2c3f5e *//*# sourceMappingURL=style.css.map */
