--- a/css/_main.scss
+++ b/css/_main.scss
@@ -121,10 +121,20 @@ body{
 
 
 .Portfolio{
-  padding: 200px 0;
+  padding: 100px 0;
   h2{
+    padding: 20px 0;
+    font-size: 2.5em;
     text-align: center;
   }
+}
+
+footer{
+  height: 100px;
+  line-height: 100px;
+  text-align: center;
+  background: #333333;
+  color: #ffffff;
 }
   
 /* #2c3f5e */
